k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-dsa
  labels:
    app: python-dsa
spec:
  selector:
    app: python-dsa
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

  type: ClusterIP
