k8s/base/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: python-dsa-virtualservice
  namespace: prod
spec:
  hosts:
    - "dsa.hugecat.net"
  gateways:
    - python-dsa-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: python-dsa
            port:
              number: 80
